--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mysql2": "^3.11.3",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "canvas": "^2.11.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
